Added description to first 2 models

--- a/Wilmar.Rmd
+++ b/Wilmar.Rmd
@@ -32,7 +32,7 @@ base_train <- subset(bd_depurada, (ANO != '2019' & ANO != '2020'))
 
 ```
 
-## Modelo lineal generalizado
+## Modelo 1: modelo lineal generalizado inicial
 
 Como nos interesa predecir el número de accidentes por unidad de tiempo, resulta conveniente utilizar un modelo lineal generalizado con la distribución Poisson. Para este primer modelo, consideraremos unicamente las variables FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.
 
@@ -47,6 +47,8 @@ lm1 <- glm(NRO_ACCID ~ FESTIVIDAD+DIA_SEMANA, family = "poisson", data = datos_l
 
 ### Predicción y Evaluación para los datos de Entrenamiento
 
+Para los datos de entrenamiento, se obtiene un MAE de 14.509135, y un R2 de 0.485746.
+
 ```{r message=FALSE, warning=FALSE, echo=F}
 # Evaluacion modelo 1
 datos_lm1_tr_pred <- datos_lm1_tr[,-c(4)]
@@ -59,6 +61,8 @@ sprintf("MSE: %f, MAE: %f, R2: %f", lm1_tr_mse, lm1_tr_mae, lm1_tr_r2)
 ```
 
 ### Predicción y Evaluación para los datos de Validación en el año 2019
+
+Para los datos de validación del año 2019, se obtiene un MAE de 17.438356, y un R2 de 0.433695.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 datos_lm1_val <- datos_val_2019 %>% group_by(FECHA, FESTIVIDAD, 
@@ -73,7 +77,9 @@ lm1_val_r2 <- R2_Score(predicted, actual) # R2
 sprintf("MSE: %f, MAE: %f, R2: %f", lm1_val_mse, lm1_val_mae, lm1_val_r2)
 ```
 
-### Variacion entre train y val
+### Variacion entre train y val (2019)
+
+La variación entre el MAE de entrenamiento y validación es de 20.1888 %, lo cual indica un posible sobreentrenamiento. Además, el R2 es relativamente bajo, cercano al 50%. Veamos que pasa para el año 2020.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 mae_variation = function(mae_tr, mae_val){
@@ -89,6 +95,15 @@ print(mae_variation(mae_tr, mae_val))
 
 ### Predicción y Evaluación para los datos de Validación en el año 2020
 
+Para los datos de validación del año 2020, se obtiene un MAE de 47.422131, y un R2 de -1.17278. Este MAE tan alto y este R2 negativo indican que el modelo se ajusta muy pobremente a los datos del año 2020. 
+
+Sin embargo, tal como veremos a continuación, ningún modelo se ajusta bien al año 2020. Esto se puede explicar por dos posibles razones:
+
+1. En 2020 fue el inicio de la pandemia, y hubo muchos menos accidentes.
+2. En 2020 solo hay observaciones hasta el mes de agosto.
+
+Por tanto, el año 2020 no nos será muy útil para validar los modelos, ya que el comportamiento de este año es muy diferente a los demás años con los que se entrenó el modelo.
+
 ```{r message=FALSE, warning=FALSE, echo=F}
 datos_lm1_val_2020 <- datos_val_2020 %>% group_by(FECHA, FESTIVIDAD, 
                                         DIA_SEMANA) %>% count(name = "NRO_ACCID")
@@ -102,7 +117,9 @@ lm1_val_2020_r2 <- R2_Score(predicted, actual) # R2
 sprintf("MSE: %f, MAE: %f, R2: %f", lm1_val_2020_mse, lm1_val_2020_mae, lm1_val_2020_r2)
 ```
 
-### Variacion entre train y val
+### Variacion entre train y val (2020)
+
+La variación entre el MAE de entrenamiento y validación es de 226.8433 %.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 mae_tr = lm1_tr_mae
@@ -110,7 +127,9 @@ mae_vl = lm1_val_mae
 print(mae_variation(mae_tr, mae_val))
 ```
 
-### Modelo lineal 2 (clase)
+### Modelo 2: modelo lineal generalizado, usando la variable clase
+
+En el segundo modelo, utilizaremos las mismas variables del modelo inicial, y sumaremos la variable clase. Veamos su desempeño.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 datos_lm2_tr <- base_train %>% group_by(FECHA, FESTIVIDAD, DIA_SEMANA, 
@@ -123,6 +142,8 @@ lm2 <- glm(NRO_ACCID ~ FESTIVIDAD+DIA_SEMANA+CLASE, family = "poisson",
 
 ### Predicción y Evaluación para los datos de Entrenamiento
 
+Para los datos de entrenamiento, se obtiene un MAE de 4.747485, y un R2 de 0.933371.
+
 ```{r message=FALSE, warning=FALSE, echo=F}
 datos_lm2_tr_pred <- datos_lm2_tr[,-c(5)]
 predicted <- round(predict(lm2, newdata=datos_lm2_tr_pred, type="response"))
@@ -133,8 +154,9 @@ lm2_tr_r2 <- R2_Score(predicted, actual) # R2
 sprintf("MSE: %f, MAE: %f, R2: %f", lm2_tr_mse, lm2_tr_mae, lm2_tr_r2)
 ```
 
-
 ### Predicción y Evaluación para los datos de Validación en el año 2019
+
+Para los datos de validación del año 2019, se obtiene un MAE de 5.048847, y un R2 de 0.926052. Estos valores son mucho mejores que los obtenidos con el modelo anterior.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 datos_lm2_val <- datos_val_2019 %>% group_by(FECHA, FESTIVIDAD, 
@@ -149,7 +171,9 @@ lm2_val_r2 <- R2_Score(predicted, actual) # R2
 sprintf("MSE: %f, MAE: %f, R2: %f", lm2_val_mse, lm2_val_mae, lm2_val_r2)
 ```
 
-### Variacion entre train y val
+### Variacion entre train y val (2019)
+
+La variación entre el MAE de entrenamiento y validación es de 6.347841 %; según estta cifra, no hay indicios de sobreentrenamiento. El R2 fue muy bueno tanto en entrenamiento como en validacion, superior al 90%. Este modelo es un muy buen candidato para ser utilizado en las predicciones futuras.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 mae_tr = lm2_tr_mae
@@ -158,6 +182,8 @@ print(mae_variation(mae_tr, mae_val))
 ```
 
 ### Predicción y Evaluación para los datos de Validación en el año 2020
+
+Para los datos de validación del año 2020, se obtiene un MAE de 10.497470, y un R2 de 0.116423. El modelo se ajusta ligeramente mejor a los datos de 2020 respecto al caso anterior, pero sigue siendo muy inadecuado para predecir la accidentalidad de este año. Tal como se explicó anteriormente, no es adecuado validar el modelo con estos datos.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 datos_lm2_val <- datos_val_2020 %>% group_by(FECHA, FESTIVIDAD, 
@@ -172,7 +198,9 @@ lm2_val_r2 <- R2_Score(predicted, actual) # R2
 sprintf("MSE: %f, MAE: %f, R2: %f", lm2_val_mse, lm2_val_mae, lm2_val_r2)
 ```
 
-### Variacion entre train y val
+### Variacion entre train y val (2020)
+
+La variación entre el MAE de entrenamiento y validación es de 121.1165 %.
 
 ```{r message=FALSE, warning=FALSE, echo=F}
 mae_tr = lm2_tr_mae
